Style and alignment fixes

--- a/app/components/ui/my-domains/domain-card/styles.scss
+++ b/app/components/ui/my-domains/domain-card/styles.scss
@@ -40,8 +40,10 @@
 	align-items: center;
 	border-bottom: 1px solid $gray-light;
 	display: flex;
+	flex-shrink: 0;
 	justify-content: space-between;
-	padding: 10px 5px;
+	min-height: 48px;
+	padding: 0 5px;
 
 	& > a {
 		padding: 8px 20px;
@@ -54,9 +56,13 @@
 	font-size: 1.8rem;
 	height: 100%;
 	padding: 20px 20px 0;
+
+	p {
+		margin-bottom: 0.8em;
+	}
 }
 
-.card-footer {
+.domain-card-footer {
 	align-items: center;
 	align-self: flex-end;
 	border-top: 1px solid $gray-light;
@@ -64,7 +70,7 @@
 	display: flex;
 	font-size: 1.4rem;
 	justify-content: space-between;
-	line-height: 3rem;
+	line-height: 2;
 	padding: 5px 20px;
 	width: 100%;
 }
@@ -91,13 +97,11 @@
 
 .connected-concierge {
 	.domain-details {
-		background: url( '/images/mydomains-concierge.svg' ) no-repeat right center;
-		justify-content: center;
+		background: url( '/images/mydomains-concierge.svg' ) no-repeat right 15px;
 		padding-right: 130px;
 
-		small {
+		.small-text {
 			font-size: 1.6rem;
-			margin-top: 15px;
 		}
 	}
 }
@@ -105,6 +109,5 @@
 .nameservers-list {
 	background: $gray-xlight;
 	font-size: 1.6rem;
-	margin-top: 10px;
 	padding: 15px;
 }
